--- a/about-us.html
+++ b/about-us.html
@@ -43,7 +43,7 @@
     </p>
   </section>
   <section class="values">
-    <h3>Things we value</h3>
+    <h3>5-Things we value</h3>
     <p>Our goal is to build long-term relationships with our clients based on trust and mutual respect</p>
     <div class="values-container">
       <div class="values-content">
@@ -73,10 +73,10 @@
       </div>
     </div>
   </section>
-<section class="differences">
-  <h3>What make us different?</h3>
+  <h4>What make us different?</h4>
+  <section class="differences">
   <div class="qualities">
-    <span>GGo far and deliver more</span>
+    <span>Go far and deliver more</span>
     <p>
       We go the extra mile for you to deliver more than a better customer experience
     </p>
@@ -93,7 +93,9 @@
       We are ego free, we are in business because of you
     </p>
   </div>
-  <aside></aside>
+  <aside class="triforce">
+    <img src="./src/cohete.png" alt="triforce">
+  </aside>
 </section>
 </div>
 <footer>
