adding more pieces

--- a/about-us.html
+++ b/about-us.html
@@ -14,11 +14,12 @@
     <nav class="nav-header">
       <ul>
         <li><a href="#" class="links">Products</a></li>
-        <li><a href="#" class="links">Contact</a></li>
+        <li><a href="./contact.html" class="links">Contact</a></li>
         <li><a href="./about-us.html" class="links">About us</a></li>
       </ul>
     </nav>
   </header>
+  <button class="Go back"> <a href="index.html">Go back</a> </button>
       <h1>
         Car agency dedicated to providing top-of-the-line 
         vehicles and exceptional customer service.
