--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <nav class="nav-header">
         <ul>
           <li><a href="#" class="links">Products</a></li>
-          <li><a href="#" class="links">Contact</a></li>
+          <li><a href="./contact.html" class="links">Contact</a></li>
           <li><a href="./about-us.html" class="links">About us</a></li>
         </ul>
       </nav>
