--- a/contact.html
+++ b/contact.html
@@ -13,33 +13,42 @@
             <a href='./index.html' class="header-logo">Effective Cars</a>
           <nav class="nav-header">
             <ul>
-              <li><a href="#" class="links">Products</a></li>
+              <li><a href="./product.html" class="links">Products</a></li>
               <li><a href="./contact.html" class="links">Contact</a></li>
               <li><a href="./about-us.html" class="links">About us</a></li>
             </ul>
           </nav>
         </header>
-        <button class="Go back"> <a href="index.html">Go back</a> </button>
+        <button class="Go-back"> <a href="index.html">Go back</a></button>
     <div class="contact-container">
-        <div class="img-container"></div>
+        <div class="img-container">
+            <div class="img-bg"></div>
+            <div class="contact-networks">
+                <span class="agency"> Effective Cars</span>
+                <p class="agency-txt">
+                    Customer service support and empowers growing ventures and innovtion as a car agency
+                </p>
+                <div class="social">
+                    <i class="bi bi-facebook"></i>
+                    <i class="bi bi-twitter"></i>
+                    <i class="bi bi-linkedin"></i>
+                    <i class="bi bi-send"></i>
+                </div>
+            </div>
+        </div>
         <div class="get-in-touch">
-            <span>X</span>
             <h1>GET IN <strong>TOUCH</strong></h1>
             <p>
                 24/7 We will answer your questions and problems
             </p>
             <form action="post">
-                <div class="first-name">
-                    <input type="text" placeholder="First Name">
+                <div class="name">
+                    <input type="text" class="input-name" placeholder="First Name">
+                    <input type="text" class="input-name" placeholder="Last Name">
                 </div>
-                <div class="last-name">
-                    <input type="text" placeholder="Last Name">
-                </div>
-                <div class="email">
-                    <input type="email" placeholder="Email">
-                </div>
-                <div class="phone">
-                    <input type="number" placeholder="Phone">
+                <div class="user-info">
+                    <input type="email" class="inputs" placeholder="Email">
+                    <input type="number" class="inputs" placeholder="Phone">
                 </div>
                 <textarea cols="2" rows="20" placeholder="Describe your issue"></textarea>
             </form>
