--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
      <a href='#' class="header-logo">Effective Cars</a>
       <nav class="nav-header">
         <ul>
-          <li><a href="#" class="links">Products</a></li>
+          <li><a href="./product.html" class="links">Products</a></li>
           <li><a href="./contact.html" class="links">Contact</a></li>
           <li><a href="./about-us.html" class="links">About us</a></li>
         </ul>
