adding some animation

--- a/product.html
+++ b/product.html
@@ -19,7 +19,7 @@
             </ul>
           </nav>
         </header>
-        <button class="Go-back"> <a href="index.html">Go back</a></button>
+        <button class="Go-back"><a href="index.html" class="goback-btn">Go back</a></button>
         <section class="products">
             <div class="cars">
                 <div class="car-bg">
