--- a/about-us.html
+++ b/about-us.html
@@ -8,101 +8,103 @@
     <title>About Us</title>
 </head>
 <body>
-  <div class="container">
-  <header>
-      <a href='./index.html' class="header-logo">Effective Cars</a>
-    <nav class="nav-header">
-      <ul>
-        <li><a href="./product.html" class="links">Products</a></li>
-        <li><a href="./contact.html" class="links">Contact</a></li>
-        <li><a href="./about-us.html" class="links">About us</a></li>
-      </ul>
-    </nav>
-  </header>
-  <button class="Go back"> <a href="index.html">Go back</a> </button>
-      <h1>
-        Car agency dedicated to providing top-of-the-line 
-        vehicles and exceptional customer service.
-      </h1>
-  <section class="gallery">
-    <div class="up"></div>
-    <div class="down"></div>
-    <div class="up-2"></div>
-  </section>
-  <section class="storytelling">
-    <h2>The art of visual storytelling</h2>
-    <p class="storytelling-txt">
-      Once upon a time, there was a small car agency that had a passion for providing exceptional
-      service and high-quality vehicles to their customers. They handpicked each car on their lot
-      and made sure that it met their strict standards for reliability and performance.
-      As word of their dedication spread, the agency grew in popularity and soon became the go-to
-      destination for those in the market for a new or pre-owned vehicle. <br />
-      They expanded their inventory to include a wide variety of makes and models, catering to the diverse needs of their customers.      
-      Their knowledgeable and friendly staff went above and beyond to ensure that every customer left their
-      dealership satisfied and happy with their purchase. They also offered financing options and a
-      top-notch service center to help keep their customers' cars in top condition. 
-    </p>
-  </section>
-  <section class="values">
-    <h3>5-Things we value</h3>
-    <p>Our goal is to build long-term relationships with our clients based on trust and mutual respect</p>
-    <div class="values-container">
-      <div class="values-content">
-        <p class="txt-values">
-          Own it! even if it's a mistake
-        </p>
-      </div>
-      <div class="values-content">
-        <p class="txt-values">
-          Always be nice and respectful
-        </p>
-      </div>
-      <div class="values-content">
-        <p class="txt-values">
-          Believe in dreams will becoming a reality 
-        </p>
-      </div>
-      <div class="values-content">
-        <p class="txt-values">
-          Care and share with the less fortunate
-        </p>
-      </div>
-      <div class="values-content">
-        <p class="txt-values">
-          Always cultivate and learn daily 
-        </p>
-      </div>
+    <div class="container">
+        <header>
+            <a href='./index.html' class="header-logo">Effective Cars</a>
+            <nav class="nav-header">
+                <ul>
+                    <li><a href="./product.html" class="links">Products</a></li>
+                    <li><a href="./contact.html" class="links">Contact</a></li>
+                    <li><a href="./about-us.html" class="links">About us</a></li>
+                </ul>
+            </nav>
+        </header>
+        <button class="Go back"> <a href="index.html">Go back</a> </button>
+            <h1>
+                Car agency dedicated to providing top-of-the-line 
+                vehicles and exceptional customer service.
+            </h1>
+        <main>
+            <section class="gallery">
+                <figure class="up"></figure>
+                <figure class="down"></figure>
+                <figure class="up-2"></figure>
+            </section>
+            <section class="storytelling">
+                <h2>The art of visual storytelling</h2>
+                <p class="storytelling-txt">
+                    Once upon a time, there was a small car agency that had a passion for providing exceptional
+                    service and high-quality vehicles to their customers. They handpicked each car on their lot
+                    and made sure that it met their strict standards for reliability and performance.
+                    As word of their dedication spread, the agency grew in popularity and soon became the go-to
+                    destination for those in the market for a new or pre-owned vehicle. <br />
+                    They expanded their inventory to include a wide variety of makes and models, catering to the diverse needs of their customers.      
+                    Their knowledgeable and friendly staff went above and beyond to ensure that every customer left their
+                    dealership satisfied and happy with their purchase. They also offered financing options and a
+                    top-notch service center to help keep their customers' cars in top condition. 
+                </p>
+            </section>
+            <section class="values">
+                <h3>5-Things we value</h3>
+                <p>Our goal is to build long-term relationships with our clients based on trust and mutual respect</p>
+                <div class="values-container">
+                    <div class="values-content">
+                        <p class="txt-values">
+                            Own it! even if it's a mistake
+                        </p>
+                    </div>
+                    <div class="values-content">
+                        <p class="txt-values">
+                            Always be nice and respectful
+                        </p>
+                    </div>
+                    <div class="values-content">
+                        <p class="txt-values">
+                            Believe in dreams will becoming a reality 
+                        </p>
+                    </div>
+                    <div class="values-content">
+                        <p class="txt-values">
+                            Care and share with the less fortunate
+                        </p>
+                    </div>
+                    <div class="values-content">
+                        <p class="txt-values">
+                            Always cultivate and learn daily 
+                        </p>
+                    </div>
+                </div>
+            </section>
+            <h4>What make us different?</h4>
+            <section class="differences">
+                <div class="qualities">
+                    <span>Go far and deliver more</span>
+                    <p>
+                        We go the extra mile for you to deliver more than a better customer experience
+                    </p>
+                    <span>Simple and Easy</span>
+                    <p>
+                        We keep things as much simple and easy as possible
+                    </p>
+                    <span>Collaboration</span>
+                    <p>
+                        We collaborate and workas and extended arm
+                    </p>
+                    <span>Ego free</span>
+                    <p>
+                        We are ego free, we are in business because of you
+                    </p>
+                </div>
+                <figure class="triforce">
+                    <img src="./src/cohete.png" alt="triforce">
+                </figure>
+            </section>
+        </main>
     </div>
-  </section>
-  <h4>What make us different?</h4>
-  <section class="differences">
-  <div class="qualities">
-    <span>Go far and deliver more</span>
-    <p>
-      We go the extra mile for you to deliver more than a better customer experience
-    </p>
-    <span>Simple and Easy</span>
-    <p>
-      We keep things as much simple and easy as possible
-    </p>
-    <span>Collaboration</span>
-    <p>
-      We collaborate and workas and extended arm
-    </p>
-    <span>Ego free</span>
-    <p>
-      We are ego free, we are in business because of you
-    </p>
-  </div>
-  <aside class="triforce">
-    <img src="./src/cohete.png" alt="triforce">
-  </aside>
-</section>
-</div>
-<footer>
-  <p>
-    Miguel Palacios, 2023 Copyright ©
-  </p>
-</footer>
+    <footer>
+        <p>
+            Miguel Palacios, 2023 Copyright ©
+        </p>
+    </footer>
 </body>
 </html>
