--- a/contact.html
+++ b/contact.html
@@ -11,55 +11,55 @@
     <div class="container">
         <header>
             <a href='./index.html' class="header-logo">Effective Cars</a>
-          <nav class="nav-header">
-            <ul>
-              <li><a href="./product.html" class="links">Products</a></li>
-              <li><a href="./contact.html" class="links">Contact</a></li>
-              <li><a href="./about-us.html" class="links">About us</a></li>
-            </ul>
+            <nav class="nav-header">
+                <ul>
+                    <li><a href="./product.html" class="links">Products</a></li>
+                    <li><a href="./contact.html" class="links">Contact</a></li>
+                    <li><a href="./about-us.html" class="links">About us</a></li>
+                </ul>
           </nav>
         </header>
-        <button class="Go-back"> <a href="index.html">Go back</a></button>
-    <div class="contact-container">
-        <div class="img-container">
-            <div class="img-bg"></div>
-            <div class="contact-networks">
-                <span class="agency"> Effective Cars</span>
-                <p class="agency-txt">
-                    Customer service support and empowers growing ventures and innovtion as a car agency
-                </p>
-                <div class="social">
-                    <i class="bi bi-facebook"></i>
-                    <i class="bi bi-twitter"></i>
-                    <i class="bi bi-linkedin"></i>
-                    <i class="bi bi-send"></i>
-                </div>
+        <button class="Go-back"><a href="index.html">Go back</a></button>
+        <main class="contact-container">
+            <div class="img-container">
+                <figure class="img-bg"></figure>
+                <section class="contact-networks">
+                    <span class="agency"> Effective Cars</span>
+                    <p class="agency-txt">
+                        Customer service support and empowers growing ventures and innovtion as a car agency
+                    </p>
+                    <div class="social">
+                        <i class="bi bi-facebook"></i>
+                        <i class="bi bi-twitter"></i>
+                        <i class="bi bi-linkedin"></i>
+                        <i class="bi bi-send"></i>
+                    </div>
+                </section>
             </div>
-        </div>
-        <div class="get-in-touch">
-            <h1>GET IN <strong>TOUCH</strong></h1>
-            <p>
-                24/7 We will answer your questions and problems
-            </p>
-            <form action="post">
-                <div class="name">
-                    <input type="text" class="input-name" placeholder="First Name">
-                    <input type="text" class="input-name" placeholder="Last Name">
-                </div>
-                <div class="user-info">
-                    <input type="email" class="inputs" placeholder="Email">
-                    <input type="number" class="inputs" placeholder="Phone">
-                </div>
-                <textarea cols="2" rows="20" placeholder="Describe your issue"></textarea>
-            </form>
-            <button class="send">Send</button>
-        </div>
+            <section class="get-in-touch">
+                <h1>GET IN <strong>TOUCH</strong></h1>
+                <p>
+                    24/7 We will answer your questions and problems
+                </p>
+                <form action="post">
+                    <div class="name">
+                        <input type="text" class="input-name" placeholder="First Name">
+                        <input type="text" class="input-name" placeholder="Last Name">
+                    </div>
+                    <div class="user-info">
+                        <input type="email" class="inputs" placeholder="Email">
+                        <input type="number" class="inputs" placeholder="Phone">
+                    </div>
+                    <textarea cols="2" rows="20" placeholder="Describe your issue"></textarea>
+                </form>
+                <button class="send">Send</button>
+            </section>
+        </main>
     </div>
-</div>
-<footer>
-    <p>
-      Miguel Palacios, 2023 Copyright ©
-    </p>
-  </footer>
+    <footer>
+        <p>
+        Miguel Palacios, 2023 Copyright ©
+        </p>
+    </footer>
 </body>
 </html>
