--- a/index.html
+++ b/index.html
@@ -20,47 +20,47 @@
       </nav>
     </header>
     <section class="content">
-    <div class="content-container">    
-      <h1>Drive into the Future with us</h1>
-      <p class="web-description">
-        Discover the ultimate driving experience with our cutting-edge
-        technology and sleek designs. Our cars are built to provide 
-        maximum performance, comfort, and safety.
-        Browse our wide selection of models, compare features,
-        and customize your own dream car.
-        Join our community of satisfied customers and drive into the
-        future with us.
-      </p>
-      <button class="sign-up">Sign up</button>
-    </div>
-      <aside class="info-header">
-      </aside>
+      <div class="content-container">    
+        <h1>Drive into the Future with us</h1>
+        <p class="web-description">
+          Discover the ultimate driving experience with our cutting-edge
+          technology and sleek designs. Our cars are built to provide 
+          maximum performance, comfort, and safety.
+          Browse our wide selection of models, compare features,
+          and customize your own dream car.
+          Join our community of satisfied customers and drive into the
+          future with us.
+        </p>
+        <button class="sign-up">Sign up</button>
+      </div>
+      <picture class="info-header"></picture>
     </section>
   </div>
+  <main>
     <section class="section-info">
       <h2> Best Sellers</h2>
       <br>
-    <div class="product-info">
-      <div class="product-container">
-        <div class="img-ilustration"></div>
+      <div class="product-info">
+        <div class="product-container">
+          <div class="img-ilustration"></div>
           <p class="product-description">Sony Vision-S</p>
         </div>
-      <div class="product-container">
-        <div class="img-ilustration-1"></div>
+        <div class="product-container">
+          <div class="img-ilustration-1"></div>
           <p class="product-description">Skodak Enyaq iV</p>
         </div>
-      <div class="product-container">
-        <div class="img-ilustration-2"></div>
+        <div class="product-container">
+          <div class="img-ilustration-2"></div>
           <p class="product-description">BMW EVs</p>
         </div>
-      <div class="product-container">
-        <div class="img-ilustration-3"></div>
+        <div class="product-container">
+          <div class="img-ilustration-3"></div>
           <p class="product-description">Kia Soul Ev</p>
         </div>     
-    </div>
+      </div>
     </section>
     <section class="quote">
-      <p>
+      <blockquote>
         I recently purchased a car from this dealership and I couldn't be
         happier with my experience. The sales team was knowledgeable,
         friendly and patient, they really took the time to understand
@@ -68,19 +68,20 @@
         The financing process was quick and easy. I love my new car,
         it's exactly what I wanted and more. I highly recommend this
         dealership to anyone looking for a new car.
-      </p>
+      </blockquote>
       <strong class="author">-Sophia Williams</strong>
     </section>
-  <section class="action-time">
-    <div class="flex-time">
-      <h3>Call to action! It's time!</h3>
-      <p>
-        Sign up now to receive updates on 
-        our latest promotions and offers.
-      </p>
-    </div>
-    <button class="action-button">Sign up</button>
-  </section>
+    <section class="action-time">
+      <div class="flex-time">
+        <h3>Call to action! It's time!</h3>
+        <p>
+          Sign up now to receive updates on 
+          our latest promotions and offers.
+        </p>
+      </div>
+      <button class="action-button">Sign up</button>
+    </section>
+  </main>
   <footer>
     <p>
       Miguel Palacios, 2023 Copyright ©
