--- a/product.html
+++ b/product.html
@@ -11,16 +11,16 @@
     <div class="container">
         <header>
             <a href='./index.html' class="header-logo">Effective Cars</a>
-          <nav class="nav-header">
-            <ul>
-              <li><a href="./product.html" class="links">Products</a></li>
-              <li><a href="./contact.html" class="links">Contact</a></li>
-              <li><a href="./about-us.html" class="links">About us</a></li>
-            </ul>
+            <nav class="nav-header">
+                <ul>
+                    <li><a href="./product.html" class="links">Products</a></li>
+                    <li><a href="./contact.html" class="links">Contact</a></li>
+                    <li><a href="./about-us.html" class="links">About us</a></li>
+                </ul>
           </nav>
         </header>
         <button class="Go-back"><a href="index.html" class="goback-btn">Go back</a></button>
-        <section class="products">
+        <main class="products">
             <div class="cars">
                 <div class="car-bg">
                     <img src="./src/best-seller.png" alt="car">
@@ -141,7 +141,7 @@
                 <button class="order">Order this car</button>
                 <button class="finance">Finance this car</button>
             </div>
-        </section>
+        </main>
     </div>
     <footer>
         <p>
