--- a/about-us.html
+++ b/about-us.html
@@ -27,9 +27,15 @@
             </h1>
         <main>
             <section class="gallery">
-                <figure class="up"></figure>
-                <figure class="down"></figure>
-                <figure class="up-2"></figure>
+                <figure class="up">
+                    <img src="src/gallery-up.jpg" class="up-img" alt="galllery car">
+                </figure>
+                <figure class="down">
+                    <img src="src/gallery-down-two.jpg" class="down-img" alt="galllery car">
+                </figure>
+                <figure class="up-2">
+                    <img src="src/gallery-up-two.jpg" class="up-two-img" alt="galllery car">
+                </figure>
             </section>
             <section class="storytelling">
                 <h2>The art of visual storytelling</h2>
