--- a/about-us.html
+++ b/about-us.html
@@ -56,29 +56,29 @@
                 <p>Our goal is to build long-term relationships with our clients based on trust and mutual respect</p>
                 <div class="values-container">
                     <div class="values-content">
-                        <p class="txt-values">
+                        <span class="txt-values">
                             Own it! even if it's a mistake
-                        </p>
+                        </span>
                     </div>
                     <div class="values-content">
-                        <p class="txt-values">
+                        <span class="txt-values">
                             Always be nice and respectful
-                        </p>
+                        </span>
                     </div>
                     <div class="values-content">
-                        <p class="txt-values">
+                        <span class="txt-values">
                             Believe in dreams will becoming a reality 
-                        </p>
+                        </span>
                     </div>
                     <div class="values-content">
-                        <p class="txt-values">
+                        <span class="txt-values">
                             Care and share with the less fortunate
-                        </p>
+                        </span>
                     </div>
                     <div class="values-content">
-                        <p class="txt-values">
+                        <span class="txt-values">
                             Always cultivate and learn daily 
-                        </p>
+                        </span>
                     </div>
                 </div>
             </section>
@@ -102,8 +102,8 @@
                         We are ego free, we are in business because of you
                     </p>
                 </div>
-                <figure class="triforce">
-                    <img src="./src/cohete.png" alt="triforce">
+                <figure class="rocket">
+                    <img src="./src/cohete.png" alt="rocket">
                 </figure>
             </section>
         </main>
