--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
+  <meta name="description" content="Effective cars agency that provide information related to the main products they offer">
   <link rel="stylesheet" href="style.css">
   <title>Document</title>
 </head>
@@ -40,24 +41,23 @@
   <main>
     <section class="section-info">
       <h2> Best Sellers</h2>
-      <br>
       <div class="product-info">
-        <div class="product-container">
-          <div class="img-ilustration"></div>
-          <p class="product-description">Sony Vision-S</p>
-        </div>
-        <div class="product-container">
-          <div class="img-ilustration-1"></div>
-          <p class="product-description">Skodak Enyaq iV</p>
-        </div>
-        <div class="product-container">
-          <div class="img-ilustration-2"></div>
-          <p class="product-description">BMW EVs</p>
-        </div>
-        <div class="product-container">
-          <div class="img-ilustration-3"></div>
-          <p class="product-description">Kia Soul Ev</p>
-        </div>     
+        <figure class="product-container">
+          <picture class="img-ilustration"></picture>
+          <figcaption class="product-description">Sony Vision-S</figcaption>
+        </figure>
+        <figure class="product-container">
+          <picture class="img-ilustration-1"></picture>
+          <figcaption class="product-description">Skodak Enyaq iV</figcaption>
+        </figure>
+        <figure class="product-container">
+          <picture class="img-ilustration-2"></picture>
+          <figcaption class="product-description">BMW EVs</figcaption>
+        </figure>
+        <figure class="product-container">
+          <picture class="img-ilustration-3"></picture>
+          <figcaption class="product-description">Kia Soul Ev</figcaption>
+        </figure>     
       </div>
     </section>
     <section class="quote">
